--- a/bin.conf
+++ b/bin.conf
@@ -1,5 +1,9 @@
+PATH="/usr/local/bin:/usr/local/sbin:/usr/bin:/usr/sbin:/bin:/sbin"
+
 bin_dir="~/.profile.d/bin"
 
 if [[ ! "$PATH" =~ "$bin_dir" ]]; then
-  export PATH="$PATH:${bin_dir}"
+  PATH="$PATH:${bin_dir}"
 fi
+
+export PATH
