--- a/rbenv.conf
+++ b/rbenv.conf
@@ -1,1 +1,4 @@
-if [[ -d ~/.rbenv ]] ; then export PATH="$HOME/.rbenv/bin:$PATH" ; fi
+if [[ -d ~/.rbenv ]] ; then
+    export PATH="$HOME/.rbenv/bin:$PATH"
+    eval "$(rbenv init -)"
+fi
