--- a/prompt.conf
+++ b/prompt.conf
@@ -1,15 +1,15 @@
 #!/bin/bash
 
-GIT_PS1=""
 if [ -f /usr/share/git/completion/git-prompt.sh ]; then
   source /usr/share/git/completion/git-prompt.sh
+fi
 
+if type __git_ps1 > /dev/null 2>&1; then
   export GIT_PS1_SHOWDIRTYSTATE=1
   export GIT_PS1_SHOWUNTRACKEDFILES=1
   export GIT_PS1_SHOWSTASHSTATE=1
   export GIT_PS1_SHOWUPSTREAM="verbose"
 
-  GIT_PS1='$(__git_ps1 " (%s)")'
   export PS1='[\u@\h \W$(__git_ps1 " (%s)")]\$ '
 else
   export PS1='[\u@\h \W]\$ '
